fix headings on mobile

--- a/css/org.css
+++ b/css/org.css
@@ -107,4 +107,7 @@ pre.src:before {
   pre.src {
     font-size: 12px;
   }
+  h1 {
+    line-height: 1em;
+  }
 }
